--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="צ'נג דניאל [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חלון אחורי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215211136699" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215214006567" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215211107284" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215214232663" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -13037,12 +13037,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Dreams that we've dreamt]]&gt;&gt;
 </pre>
 </div>
-<div created="20190309100625286" modified="20190310200317180" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]]" title="חלון אחורי">
+<div created="20190309100625286" modified="20200215214303876" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]]" title="חלון אחורי">
 <pre>[img[pictures/rear-window.jpg]]
 
 !!![[תומר]]:
 
-[[בחלון האחורי|https://www.imdb.com/title/tt0047396/]] שלנו בעיקר שומעים את יהודה הלוי והחשמונאים, ואת עובדי [[התמ&quot;א|https://he.wikipedia.org/wiki/%D7%AA%D7%9E%22%D7%90_38]]. בלילה שומעים בחורות ובחורים, שרים ומנגנים בגיטרה.</pre>
+[[בחלון האחורי|https://www.imdb.com/title/tt0047396/]] שלנו בעיקר שומעים את יהודה הלוי והחשמונאים, ואת עובדי [[התמ&quot;א|https://he.wikipedia.org/wiki/%D7%AA%D7%9E%22%D7%90_38]]. בלילה שומעים בחורות ובחורים, שרים ומנגנים בגיטרה.
+
+
+
+&lt;&lt;englink [[Rear Window ]]&gt;&gt;</pre>
 </div>
 <div created="20170422160814236" modified="20180605132739043" tags="[[המטבח על פי ז'נבייב]] מתכונים" title="חמאת שום ועשבי תיבול">
 <pre>[img[pictures/genevieve-green-butter.jpg]]
@@ -13352,7 +13356,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
  
 &lt;&lt;englink [[Yoyo]]&gt;&gt;</pre>
 </div>
-<div created="20170522202441678" modified="20180125165822572" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="יויו וגורה">
+<div created="20170522202441678" modified="20200215212905426" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="יויו וגורה">
 <pre>[img[pictures/yoyo-ve-gura.jpg]]
 
 !!![[גורה]]:
@@ -13370,7 +13374,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 בזמן האחרון,  [[כשאני מציירת לאתר שלנו|עם יויו באמסטרדם]], אני נרגעת.
 
 
-</pre>
+&lt;&lt;englink [[Yoyo and Gura]]&gt;&gt;</pre>
 </div>
 <div created="20180325182643664" modified="20200212144025809" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="יוני רכטר">
 <pre>[img[pictures/yoni-rechter.jpg]]
