--- a/english.html
+++ b/english.html
@@ -283,6 +283,8 @@ Error message and password prompt
 
 <li>Cat Sisters</li>
 
+<li>Cauliflower in a frying Pan</li>
+
 <li>Changing</li>
 
 <li>Charlie Kaufman</li>
@@ -316,6 +318,8 @@ Error message and password prompt
 <li>Daniel</li>
 
 <li>Daphne Abaroah</li>
+
+<li>David Bowie</li>
 
 <li>David Byrne</li>
 
@@ -530,6 +534,8 @@ Error message and password prompt
 <li>TV</li>
 
 <li>TV Series</li>
+
+<li>Vegan recipes</li>
 
 <li>Vincent Van Gogh</li>
 
@@ -8407,7 +8413,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215212811420" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215220318590" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8436,7 +8442,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215213802800" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215215113505" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8693,7 +8699,7 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215214339981" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215220626842" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
@@ -8770,6 +8776,14 @@ When a Coen sister is asked what kind of animal is she, she immediately answers-
  &lt;&lt;heblink [[אחיות חתול]]&gt;&gt;
 
 
+</pre>
+</div>
+<div created="20200215215749574" modified="20200215220014963" tags="[[Food addicts]] Recipes [[Vegan recipes]]" title="Cauliflower in a frying Pan">
+<pre>
+[img[pictures/kruvit-bamachvat.jpg]]
+
+
+ &lt;&lt;heblink [[כרובית במחבת]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213180145409" modified="20200213180416623" tags="Houses [[On the road to somewhere]] [[The archive's trustees]]" title="Changing">
@@ -9006,6 +9020,15 @@ She was four-year-old when I was born, and shortly after my birth, my parents no
 
  &lt;&lt;heblink [[דפני אברואה]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200215220237328" modified="20200215220407549" tags="[[Outer sisters]] Music Films [[Iry claims]]" title="David Bowie">
+<pre>
+[img[pictures/david-bowie.jpg]]
+
+
+ &lt;&lt;heblink [[דיוויד בואי]]&gt;&gt;
 
 </pre>
 </div>
@@ -10127,6 +10150,14 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 </pre>
 </div>
+<div created="20200215220525905" modified="20200215220651679" tags="[[The team]] Meals [[Food addicts]] [[How many songs can you even invent at all]] Kitchens" title="Vegan recipes">
+<pre>
+[img[pictures/vegan.jpg]]
+
+
+ &lt;&lt;heblink [[מתכונים טבעוניים]]&gt;&gt;
+</pre>
+</div>
 <div created="20200213171604745" modified="20200213171814296" tags="[[Outer sisters]]" title="Vincent Van Gogh">
 <pre>[img[pictures/van-goch.jpg]]
 
@@ -10231,16 +10262,16 @@ they also said tape''
 
 </pre>
 </div>
-<div created="20200101132642919" modified="20200101133516550" tags="" title="Yoyo">
+<div created="20200101132642919" modified="20200215220155985" tags="" title="Yoyo">
 <pre>[img[pictures/yoyo.jpg]]
 
  !!![[Iry]]:
 
 For me Yoyo was, first of all, Gura's beloved brother, who I met in the beginning of middle school.
 
-Now, he's my god. I believe him, I believe in him, I believe in what he believes, I adore him, I love him, I like him, I thank him every day, I am assisted by him, I listen to him, I love his taste and his mind, and I always want to be around the table when he dines.
+Now, he's my god. [[I believe him|A Privileged Man]], I believe in him, I believe in what he believes, I adore him, I love him, I like him, I thank him every day, I am assisted by him, I listen to him, [[I love his taste|Cauliflower in a frying Pan]]  and his mind, and I always want to be around the table when he dines.
 
-He can freak out when people say: passing episode or permanent ritual. He gets sick if people are late. He bluffs himself.  Yesterday he told me that I should pay attention, that even though I am self-aware I'm minding my own ass. He told us couple of weeks before David Bowie's death that by BLACK STAR he already knew he's going to die, and you can hear it in every possible way.
+He can freak out when people say: passing episode or permanent ritual. He gets sick if people are late. He bluffs himself.  Yesterday he told me that I should pay attention, that even though I am self-aware I'm minding my own ass. He told us couple of weeks before [[David Bowie's|David Bowie]] death that by BLACK STAR he already knew he's going to die, and you can hear it in every possible way.
 
 Actually, I didn't know David Bowie well before Yoyo became part of my daily life, meaning this last year.
 
