--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200213214722566" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215203805222" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215220712215" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חלון אחורי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="יויו [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215214006567" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215220225939" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215214232663" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215220722606" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -11805,7 +11805,7 @@ Is where I want to be
 
 זה לא כל כך נעים לראות רדיו סגור, אבל כשאתה מתגורר כאן בגטו  לפעמים דה וינצ'י 2 זה בדרך, ואני רגשן [[מתגעגע|https://www.youtube.com/watch?v=SPg4IwGZMvM]].</pre>
 </div>
-<div created="20170105154405192" modified="20190126102153255" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים" title="דיוויד בואי">
+<div created="20170105154405192" modified="20200215220502704" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
@@ -11823,7 +11823,7 @@ Is where I want to be
 
 
 
-</pre>
+&lt;&lt;englink [[David Bowie]]&gt;&gt;</pre>
 </div>
 <div created="20180123164835249" modified="20200213163112242" tags="[[אחיות חוץ]] מוזיקה סרטים" title="דיוויד ביירן">
 <pre>[img[pictures/david-byrne.jpg]]
@@ -14211,7 +14211,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היה רגע בעברי בו שמתי לב, שכשאני מבסוט מעצמי בעקבות איזו מחשבה שנראית לי מבריקה למשל, או משהו שעשיתי - זה מלווה בהתנפחות קלה של בית החזה משל כרבולת של תרנגול מלא אגו על גבול הפעלת הכנפיים וקריאה מתגוררת שם.</pre>
 </div>
-<div created="20170621135717036" modified="20180605131611882" tags="[[חיות אוכל]] [[מתכונים טבעוניים]] מתכונים" title="כרובית במחבת">
+<div created="20170621135717036" modified="20200215220118569" tags="[[חיות אוכל]] [[מתכונים טבעוניים]] מתכונים" title="כרובית במחבת">
 <pre>[img[pictures/kruvit-bamachvat.jpg]]
 
 !!![[יויו]]:
@@ -14235,7 +14235,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 4. צולים את השום, וכשהוא מתחיל להזהיב מוסיפים את פרחי הכרובית וצולים הרבה זמן (יחסית), ומידי פעם מערבבים בעדינות - עד שהכרובית מזהיבה (כ-40 דקות).
 
 5. כשהכרובית צלויה מספיק מעבירים אותה לקערה. סוחטים מעל מיץ מרבע לימון עד חצי לימון, קורט מלח ים, פלפל שחור גרוס, מקשטים עם כף-שלוש כפות טחינה גולמית ומגישים.
-</pre>
+
+
+&lt;&lt;englink [[Cauliflower in a frying Pan]]&gt;&gt;</pre>
 </div>
 <div created="20170923082157875" modified="20190310195523585" tags="הסופרנוס טלוויזיה" title="כריסטופר מולטיסנטי">
 <pre>[img[pictures/christopher-moltisanti.jpg]]
@@ -15582,13 +15584,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Recipes]]&gt;&gt;
 </pre>
 </div>
-<div created="20180107120555995" modified="20200212144329677" tags="[[חיות אוכל]] ארוחות הצוות מתכונים מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="מתכונים טבעוניים">
+<div created="20180107120555995" modified="20200215220751021" tags="[[חיות אוכל]] ארוחות הצוות מתכונים מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="מתכונים טבעוניים">
 <pre>[img[pictures/vegan.jpg]]
 
 חיות המשק המומות לטובה
 
 &lt;&lt;list-links filter:&quot;[tag[מתכונים טבעוניים]]&quot;&gt;&gt;
 
+
+&lt;&lt;englink [[Vegan recipes]]&gt;&gt;
 
 
 </pre>
