--- a/english.html
+++ b/english.html
@@ -497,6 +497,8 @@ Error message and password prompt
 
 <li>The Couscous</li>
 
+<li>The Face Directed Outside</li>
+
 <li>The first assembly</li>
 
 <li>The global village</li>
@@ -8413,7 +8415,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215220318590" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215220703966" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8422,7 +8424,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The Face Directed Outside]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8699,7 +8701,7 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215220626842" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215221800530" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
@@ -9267,7 +9269,7 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
 
  &lt;&lt;heblink [[היסטריות]]&gt;&gt;</pre>
 </div>
-<div created="20200212221326501" modified="20200212221745764" tags="[[On the road to somewhere]] [[True stories]] [[How many songs can you even invent at all]]" title="I would like to apologize">
+<div created="20200212221326501" modified="20200215221401771" tags="[[On the road to somewhere]] [[True stories]] [[How many songs can you even invent at all]]" title="I would like to apologize">
 <pre>[img[pictures/ani-roza.jpg]]
 
 
@@ -9951,6 +9953,19 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
+<div created="20200215220929667" modified="20200215221846210" tags="[[Iry claims]]" title="The Face Directed Outside">
+<pre>
+[img[pictures/im-hapanim-hachuza.jpg]]
+
+!!![[Iry]]:
+
+I've come to the conclusion that I need to be ready for the nice enlightened vehicle, which may come one day from the outside, to pick me up from here. The vehicle will stop by me, the door of the seat near the driver, who puts his life at risk, will open, and I'll climb in. I'll look at the driver, the door will close and the vehicle will start rising. I'll squeeze his hand as I'll hear the wheels folding, and I'm sure he'll be very friendly. The windows will close and we'll keep rising, and that's it, [[we'll go|https://www.youtube.com/watch?v=7zaBCbXUkeU]]. Now I'm trying to estimate how long this kind of drive takes, and thinking which kind of bag should I prepare, and where is it best to wait
+
+. 
+ &lt;&lt;heblink [[עם הפנים החוצה]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200202171450477" modified="20200212175928821" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>[img[pictures/asefot.jpg]]
 
@@ -10150,10 +10165,13 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 </pre>
 </div>
-<div created="20200215220525905" modified="20200215220651679" tags="[[The team]] Meals [[Food addicts]] [[How many songs can you even invent at all]] Kitchens" title="Vegan recipes">
+<div created="20200215220525905" modified="20200215221439470" tags="[[The team]] Meals [[Food addicts]] [[How many songs can you even invent at all]] Kitchens" title="Vegan recipes">
 <pre>
 [img[pictures/vegan.jpg]]
 
+
+
+&lt;&lt;list-links filter:&quot;[tag[Vegan recipes]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[מתכונים טבעוניים]]&gt;&gt;
 </pre>
