--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="יויו [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215220225939" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215221240310" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215220722606" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215221254238" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -16577,14 +16577,14 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20170628145012336" modified="20180905132813122" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
+<div created="20170628145012336" modified="20200215221322287" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
 <pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[אירי]]:
 
 הגעתי למסקנה, שאני צריכה להיות מוכנה לרכב המואר והנחמד, שעשוי לבוא יום אחד מבחוץ, ולאסוף אותי מכאן. הרכב יעצור לידי, הדלת של המושב שליד הנהג, ששם נפשו בכפו, תיפתח, ואני אכנס פנימה. אני אביט בנהג, הדלת תיסגר והרכב יתחיל לעלות. אלחץ את ידו תוך שאשמע את הגלגלים נכנסים, אני בטוחה שהוא יהיה חביב מאד. החלונות יסגרו ונמשיך לעלות, וזהו, [[ניסע|https://www.youtube.com/watch?v=7zaBCbXUkeU]]. כעת אני מנסה להעריך כמה זמן אורכת נסיעה כזאת, וחושבת איזה מין תיק אני  מכינה, ואיפה הכי כדאי לי לחכות.
 
-</pre>
+&lt;&lt;englink [[The Face Directed Outside]]&gt;&gt;</pre>
 </div>
 <div created="20170601232601606" modified="20180125165934737" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
