--- a/english.html
+++ b/english.html
@@ -337,11 +337,15 @@ Error message and password prompt
 
 <li>Eva Coen</li>
 
+<li>Exile</li>
+
 <li>Fa</li>
 
 <li>Films</li>
 
 <li>Food addicts</li>
+
+<li>Gabriel Fauré</li>
 
 <li>Gan-Ya</li>
 
@@ -398,6 +402,8 @@ Error message and password prompt
 <li>John Irving</li>
 
 <li>Jozef Abaroa</li>
+
+<li>Karl Ove Knausgard</li>
 
 <li>Keep on bleeding</li>
 
@@ -8415,7 +8421,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215220703966" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215225012544" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8424,7 +8430,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The Face Directed Outside]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Karl Ove Knausgard]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8444,7 +8450,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215215113505" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215225045011" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8701,7 +8707,7 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215221800530" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215225058689" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
@@ -9100,6 +9106,19 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
+<div created="20200215222945436" modified="20200215223116423" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]]" title="Exile">
+<pre>
+[img[pictures/galoot.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[גלות]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20200212172954331" modified="20200212173109594" tags="[[Coen sister]]" title="Fa">
 <pre>[img[pictures/fa.jpg]]
 
@@ -9122,6 +9141,20 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 &lt;&lt;list-links filter:&quot;[tag[Food addicts]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[חיות אוכל]]&gt;&gt;
+</pre>
+</div>
+<div created="20200215222131458" modified="20200215222759573" tags="[[Outer sisters]] Music [[Iry claims]] [[How many songs can you even invent at all]]" title="Gabriel Fauré">
+<pre>
+[img[pictures/gabriel-faure.jpg]]
+
+!!![[Gura]]:
+
+Iry claims, that tormented [[Gabriel Fauré|https://en.wikipedia.org/wiki/Gabriel_Faur%C3%A9]] was also [[LGBT|https://en.wikipedia.org/wiki/Gender]]. 
+Likewise, she thinks that the widening gender-oriented spectrum, has to do with life here in [[exile|Exile]].
+
+
+ &lt;&lt;heblink [[גבריאל פורה]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200215210632854" modified="20200215210740484" tags="[[On the road to somewhere]] [[A friend]] [[The archive's trustees]]" title="Gan-Ya">
@@ -9401,6 +9434,25 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 
  &lt;&lt;heblink [[ג'וזף אברואה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200215223401264" modified="20200215225135099" tags="[[Outer sisters]] Metafiction" title="Karl Ove Knausgard">
+<pre>
+[img[pictures/karl-ove.jpg]]
+
+!!![[Yoyo]]:
+
+Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.com/simpleview/image/fetch/c_limit,f_jpg,q_64,w_800/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D3E95034E807A06F46BB55415BAD15A5271D79551.jpg%26dh%3D533%26dw%3D800%26cropX%3D0%26cropY%3D263%26cropH%3D2663%26cropW%3D4000%26t%3D4&amp;.jpg]] that came up after searching [[Tromøya|https://en.wikipedia.org/wiki/Trom%C3%B8ya]] on the search engine, the place where [[Karl Ove|https://en.wikipedia.org/wiki/Karl_Ove_Knausg%C3%A5rd]] grew up. If I remember correctly, one of the things that he writes about in the first book (or the second one) is that he likes finding the similarity between different places, and the sight in the picture looks very similar to [[the house that I used to live|The lab]] in back then. The road that bends between the trees, the building on the right and the far building near the turn. The deciduous trees, that were almond trees in my case, and grove trees that as far as I'm concerned, are mostly oak trees. I am an almost-40-year-old man, who's in love with [[Angelic]], and starting to think about children, and I've already understood it's not that easy. I sympathize with so many things that Karl Ove wrote about, mostly him and Ingba his brother, who are just like [[Gura and I|Yoyo and Gura]].
+
+
+
+
+ &lt;&lt;heblink [[קרל אובה קנאוסגורד]]&gt;&gt;
+
+
+
+
+
 </pre>
 </div>
 <div created="20200212173527645" modified="20200215095257898" tags="[[In the Animal Farm]] [[Monkeys with car keys]]" title="Keep on bleeding">
