--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200213214722566" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215220712215" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215225217604" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קרל אובה קנאוסגורד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215221240310" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215223500713" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215221254238" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215225237890" tags="[[אחות כהן]] iry" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -10997,7 +10997,7 @@ Is where I want to be
 
 &lt;&lt;englink [[A Privileged Man ]]&gt;&gt;</pre>
 </div>
-<div created="20170602180000251" modified="20200212143649144" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="גבריאל פורה">
+<div created="20170602180000251" modified="20200215222851378" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="גבריאל פורה">
 <pre>[img[pictures/gabriel-faure.jpg]]
 
 !!![[גורה]]:
@@ -11005,7 +11005,9 @@ Is where I want to be
 אירי טוענת, שגם [[גבריאל פורה|https://en.wikipedia.org/wiki/Gabriel_Faur%C3%A9]] המיוסר היה [[גייז|https://en.wikipedia.org/wiki/Gender]].
 
 כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
-</pre>
+
+
+&lt;&lt;englink [[Gabriel Fauré]]&gt;&gt;</pre>
 </div>
 <div created="20170619141108783" modified="20200215210326963" tags="[[סיפורים אמיתיים]] אימהות" title="גואן אופנה">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
@@ -11635,7 +11637,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20200208125447167" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]]" title="גלות">
+<div created="20170105170620001" modified="20200215223240153" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -11654,7 +11656,7 @@ Is where I want to be
 אני רוצה לחשוב, [[שדיוויד בואי|דיוויד בואי]] חזר לכוכב שלו בשלום, ובכך השלים את משימתו אם לא למעלה מזה.
 
 
-
+&lt;&lt;englink [[Exile]]&gt;&gt;
 
 
 </pre>
@@ -16577,7 +16579,7 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20170628145012336" modified="20200215221322287" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
+<div created="20170628145012336" modified="20200215222903825" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
 <pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[אירי]]:
@@ -17827,14 +17829,18 @@ Fapina''
 
 6. </pre>
 </div>
-<div created="20180629142454101" modified="20180703111644550" tags="[[אחיות חוץ]] [[מטא בדיון]]" title="קרל אובה קנאוסגורד">
+<div created="20180629142454101" modified="20200215225304351" tags="[[אחיות חוץ]] [[מטא בדיון]]" title="קרל אובה קנאוסגורד">
 <pre>[img[pictures/karl-ove.jpg]]
 
 !!![[יויו]]:
 
 
 
-[[מהתמונה הזו|https://res.cloudinary.com/simpleview/image/fetch/c_limit,f_jpg,q_64,w_800/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D3E95034E807A06F46BB55415BAD15A5271D79551.jpg%26dh%3D533%26dw%3D800%26cropX%3D0%26cropY%3D263%26cropH%3D2663%26cropW%3D4000%26t%3D4&amp;.jpg]] ציירה גורה [[את הציור|לצייר]] שלקוח מתוצאות הקלדת השם [[טרומואיה|https://en.wikipedia.org/wiki/Trom%C3%B8ya]] במנוע החיפוש, המקום בו גדל [[קרל אובה|https://en.wikipedia.org/wiki/Karl_Ove_Knausg%C3%A5rd]]. אם אני זוכר נכון, אחד הדברים שהוא כותב בספר הראשון (או השני), שאחד הדברים שהוא אוהב זה מציאת הדומה בין מקומות שונים, והמראה בציור הזה דומה מאד לדרך [[לבית בו גרתי אז|המעבדה]]. הכביש המתעקל לתוך העצים, המבנה שמימין והמבנה המרוחק שליד העיקול. העצים הנשירים שהיו שקדיות במקרה שלי, ועצי החורש שמבחינתי הם בעיקר עצי אלון. אני גבר בן כמעט 40 שמאוהב [[באנג'ליק|אנג'ליק]], ומתחיל לחשוב על ילדים, וכבר הבנתי שזה לא עניין של מה בכך. אני מזדהה עם כל כך הרבה דברים שקרל אובה כותב עליהם והכי זה הוא ואינגבה אחיו, כמו שגורה ואני.</pre>
+[[מהתמונה הזו|https://res.cloudinary.com/simpleview/image/fetch/c_limit,f_jpg,q_64,w_800/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D3E95034E807A06F46BB55415BAD15A5271D79551.jpg%26dh%3D533%26dw%3D800%26cropX%3D0%26cropY%3D263%26cropH%3D2663%26cropW%3D4000%26t%3D4&amp;.jpg]] ציירה גורה [[את הציור|לצייר]] שלקוח מתוצאות הקלדת השם [[טרומואיה|https://en.wikipedia.org/wiki/Trom%C3%B8ya]] במנוע החיפוש, המקום בו גדל [[קרל אובה|https://en.wikipedia.org/wiki/Karl_Ove_Knausg%C3%A5rd]]. אם אני זוכר נכון, אחד הדברים שהוא כותב בספר הראשון (או השני), שאחד הדברים שהוא אוהב זה מציאת הדומה בין מקומות שונים, והמראה בציור הזה דומה מאד לדרך [[לבית בו גרתי אז|המעבדה]]. הכביש המתעקל לתוך העצים, המבנה שמימין והמבנה המרוחק שליד העיקול. העצים הנשירים שהיו שקדיות במקרה שלי, ועצי החורש שמבחינתי הם בעיקר עצי אלון. אני גבר בן כמעט 40 שמאוהב [[באנג'ליק|אנג'ליק]], ומתחיל לחשוב על ילדים, וכבר הבנתי שזה לא עניין של מה בכך. אני מזדהה עם כל כך הרבה דברים שקרל אובה כותב עליהם והכי זה הוא ואינגבה אחיו, [[כמו שגורה ואני|יויו וגורה]].
+
+
+&lt;&lt;englink [[Karl Ove Knausgard]]&gt;&gt;
+</pre>
 </div>
 <div created="20170401220808061" modified="20170608171028060" tags="[[משפחת באומן]]" title="קרן">
 <pre>[img[pictures/keren.jpg]]
