--- a/english.html
+++ b/english.html
@@ -535,6 +535,8 @@ Error message and password prompt
 
 <li>They make peace</li>
 
+<li>To draw</li>
+
 <li>Tomer</li>
 
 <li>True stories</li>
@@ -8430,7 +8432,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Karl Ove Knausgard]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[To draw]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8707,7 +8709,7 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215225058689" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215225505033" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
@@ -10171,6 +10173,13 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 
 
  &lt;&lt;heblink [[עושים שלום]]&gt;&gt;</pre>
+</div>
+<div created="20200215225422814" modified="20200215225523865" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]]" title="To draw">
+<pre>
+[img[pictures/lezayer.jpg]]
+
+
+ &lt;&lt;heblink [[לצייר]]&gt;&gt;</pre>
 </div>
 <div created="20200202164522080" modified="20200215173631203" tags="[[A friend]] [[Coen sister]]" title="Tomer">
 <pre>[img[pictures/tomer.jpg]]
