--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קרל אובה קנאוסגורד]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215223500713" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215225410357" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215225237890" tags="[[אחות כהן]] iry" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215225552887" tags="[[אחות כהן]] iry" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -14784,12 +14784,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180702161904435" modified="20200212144159088" tags="[[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] [[מטא בדיון]]" title="לצייר">
+<div created="20180702161904435" modified="20200215225644713" tags="[[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] [[מטא בדיון]]" title="לצייר">
 <pre>[img[pictures/lezayer.jpg]]
 
 !!![[גורה]]:
 
-גם עלי [[קרל אובה|קרל אובה קנאוסגורד]] משפיע. יש רגעים בהם המילים שלו ממש מציירות. הוא מספר על החיים ואגב כך, בין השאר, על ציירים, ציורים, מראות, נוף. הוא מתאר בסבלנות ובקול ברור כל דבר ודבר. גם אני שואפת להחשב [[כותבת|מחפשת את אירי]], אבל עכשיו: אני כותבת אך גם מציירת על דפי בריסטול בגודל A4, ומשתמשת בעפרונות שמן צבעוניים. אני מציירת לאתר בלבד, ואם אין לי מה לצייר אני מוצאת. אני מחליטה מה אצייר, לפעמים אני אוספת כמה צילומים שצילמתי או צילומים ממנועי חיפוש, ומחברת אותם לתמונה אחת, ראש מפה, חדר משם. אחרי שאני מסיימת עם העפרון אני צובעת - שזה הדבר המהנה ביותר עבורי. עוד צבע ועוד צבע. צבעים תמיד היפנטו אותי כמו צלילים, וכשהם יחדיו אז הם כמו מוסיקה - מרוממים. זה לא שקל לי לצייר, זה גם לא שאני סובלת - אבל יש רגעים שהראש מתעוות לי מבפנים מרוב מאמץ, והתוצאה רחוקה מלהיות  זו שתכננתי או דמיינתי, ועדיין זה הדבר שאני הכי רוצה לעשות. </pre>
+גם עלי [[קרל אובה|קרל אובה קנאוסגורד]] משפיע. יש רגעים בהם המילים שלו ממש מציירות. הוא מספר על החיים ואגב כך, בין השאר, על ציירים, ציורים, מראות, נוף. הוא מתאר בסבלנות ובקול ברור כל דבר ודבר. גם אני שואפת להחשב [[כותבת|מחפשת את אירי]], אבל עכשיו: אני כותבת אך גם מציירת על דפי בריסטול בגודל A4, ומשתמשת בעפרונות שמן צבעוניים. אני מציירת לאתר בלבד, ואם אין לי מה לצייר אני מוצאת. אני מחליטה מה אצייר, לפעמים אני אוספת כמה צילומים שצילמתי או צילומים ממנועי חיפוש, ומחברת אותם לתמונה אחת, ראש מפה, חדר משם. אחרי שאני מסיימת עם העפרון אני צובעת - שזה הדבר המהנה ביותר עבורי. עוד צבע ועוד צבע. צבעים תמיד היפנטו אותי כמו צלילים, וכשהם יחדיו אז הם כמו מוסיקה - מרוממים. זה לא שקל לי לצייר, זה גם לא שאני סובלת - אבל יש רגעים שהראש מתעוות לי מבפנים מרוב מאמץ, והתוצאה רחוקה מלהיות  זו שתכננתי או דמיינתי, ועדיין זה הדבר שאני הכי רוצה לעשות. 
+
+&lt;&lt;englink [[To draw]]&gt;&gt;</pre>
 </div>
 <div created="20170702003010520" modified="20170702004243834" tags="[[הנה, כך]]" title="לצייר גרפיטי וירטואלי במִיצְפֶּרֶש">
 <pre>[img[pictures/anarchist-grafitti.jpg]]
