--- a/english.html
+++ b/english.html
@@ -411,6 +411,8 @@ Error message and password prompt
 
 <li>Laundry</li>
 
+<li>Less is more</li>
+
 <li>Life is not About Talking</li>
 
 <li>logo-bg</li>
@@ -8432,7 +8434,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[To draw]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Less is more]] [[To draw]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8709,7 +8711,7 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215225505033" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215225919671" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
@@ -9483,6 +9485,32 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
  &lt;&lt;heblink [[כביסה]]&gt;&gt;
 
 
+
+</pre>
+</div>
+<div created="20200215225741395" modified="20200215231153357" tags="[[The kitchen according to Genevieve]] Kitchens" title="Less is more">
+<pre>
+[img[pictures/less-is-more.jpg]]
+
+!!![[Genevieve]]:
+
+Many times, you may hear people say:
+
+I added salt, black pepper, white pepper, nutmeg, cardamom, coriander, mustard seeds, parsley, dill, cumin, turmeric, hot paprika, wine… what could go wrong?
+
+Well,
+
+It could go pretty wrong, your food- if you don't pay attention to what's suitable and how much of it.
+
+We were guests of Eva and Phillip this week, and there was a cake that Eva was embarrassed of me trying, &quot;because I've put all the nuts that stayed in the can instead of just a handful, and I knew it was wrong, and I did it&quot;, she apologized, and also made cookies and a pie. 
+
+The cake itself with the cinnamon and the maple was still tasty and sweet in the right way, but it's true that a long chewing process was involved in eating it, and the nuts took over, but I still ate more of it.
+
+Bottom line is, if you're standing in front of whatever it is and hesitating, wondering, which flavors to add, or the proper amount of sugar or salt, without any hesitation add less, because less is more. 
+
+
+
+ &lt;&lt;heblink [[less is more]]&gt;&gt;
 
 </pre>
 </div>
