--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[less is more]] [[פאי נקטרין]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215225410357" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215225809035" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9435,7 +9435,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[כאן|https://www.youtube.com/watch?v=FhlLAqa5eq8]] היא שרה עם בריל [[מפלא אוזן|פלא אוזן]]. </pre>
 </div>
-<div created="20170624105324019" modified="20190617132834718" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="less is more">
+<div created="20170624105324019" modified="20200215230040103" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
 !!![[ז'נבייב]]:
@@ -9455,7 +9455,7 @@ well,
 מה שאני אומרת - אם אתם עומדים מול מה שזה לא יהיה וחוככים בדעתכם, ותוהים, אילו טעמים להוסיף פנימה, או כמות הסוכר או המלח - אז בלי להתבלבל שימו את הפחות - כי פחות זה יותר.
 
 
-</pre>
+&lt;&lt;englink [[less is more]]&gt;&gt;</pre>
 </div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215225552887" tags="[[אחות כהן]] iry" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215230012658" tags="[[אחות כהן]] iry" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
