--- a/english.html
+++ b/english.html
@@ -8434,7 +8434,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Less is more]] [[To draw]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Angelic [[Less is more]] [[To draw]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8711,12 +8711,12 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215225919671" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200216084149278" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
 
- &lt;&lt;heblink [[אנ'ליק]]&gt;&gt;
+ &lt;&lt;heblink [[אנג'ליק]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215095540063" modified="20200215095741084" tags="[[In the Animal Farm]]" title="Assuming and Preserving">
